--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -45,7 +45,7 @@
 					
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-primary sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Sign up with Facebook</span></a>
+			 			<a href="/tau/story" class="btn btn-large btn-primary" data-function="startStoryHomePageWizard"><i class="ico-circle-plus ico-white"></i><span>Start Here</span></a>
 			 			
 			 		</div>
 
