--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -21,7 +21,7 @@
 
 <script type="text/javascript">
 <!--
-(function() {
+/*(function() {
 	if ($('.slider-wrapper').length>0){
 		var number = 1 + Math.floor(Math.random() * 6);
 		//$('.slider-wrapper').addClass('slider-wrapper'+number);
@@ -29,7 +29,7 @@
 	}
 
 	
-})();
+})();*/
 jQuery(document).ready(function ($) {
 <% if @connect_instagram==1 %>
 
