change the url of icons login

--- a/app/views/devise/shared/_social_links.html.erb
+++ b/app/views/devise/shared/_social_links.html.erb
@@ -4,10 +4,10 @@
           <div class="social-info-wrap">
             <div class="social-info">
               <div class="social-info-front social-twitter">
-                <a href="http://twitter.com"></a>
+                <a href="<%= user_omniauth_authorize_path(:twitter) %>"></a>
               </div>
               <div class="social-info-back social-twitter-hover">
-                <a href="http://twitter.com"></a>
+                <a href="<%= user_omniauth_authorize_path(:twitter) %>"></a>
               </div>  
             </div>
           </div>
@@ -18,10 +18,10 @@
           <div class="social-info-wrap">
             <div class="social-info">
               <div class="social-info-front social-facebook">
-                <a href="http://facebook.com"></a>
+                <a href="<%= user_omniauth_authorize_path(:facebook) %>"></a>
               </div>
               <div class="social-info-back social-facebook-hover">
-                <a href="http://facebook.com"></a>
+                <a href="<%= user_omniauth_authorize_path(:facebook) %>"></a>
               </div>
             </div>
           </div>
