--- a/app/views/layouts/_unregisterd_modals.html.erb
+++ b/app/views/layouts/_unregisterd_modals.html.erb
@@ -12,7 +12,7 @@
     <div class="message">To check this out you need to sign in to FeedFiction</div>
     <div>Try it. It's Free.</div>
     <hr/>
-    <%= link_to '', new_user_registration_path , class: 'btn-signin-large'%>
+    <%= link_to 'Sign up', new_user_registration_path , class: 'btn btn-primary btn-large'%>
     
     <div class="link-login">Been here before? <%= link_to "Login", new_user_session_path %></div>
   </div>
