change sign up page to work correctly

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <div class="login-box">
   
-  
-  <% if @user.nil? %>
+  <% if @user.provider.nil? %>
     <h1>Sign up</h1>  
     <%= render 'devise/shared/social_links' %>
     <% elsif @user.id.nil? %>
