--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2318,6 +2318,7 @@ ul.commentlist {
 					-webkit-border-radius: 10px;
 					-moz-border-radius: 10px;
 					border-radius: 10px;
+					font-size: 15px;
 					.sign-in{
 				
 						position: relative;
@@ -2325,7 +2326,8 @@ ul.commentlist {
 						*/
 					}
 					.btn-large {
-						padding:0;
+						margin:0 10px;
+						/*padding:0;*/
 						span {
 							font-size: 24px;
 							display: inline-block;
