--- a/app/views/story_lines/create.js.erb
+++ b/app/views/story_lines/create.js.erb
@@ -1,8 +1,6 @@
+
 if ($('#story-<%=@story.id%>').length >0){
 		$('#story-<%=@story.id%> .picture').html("<%= escape_javascript(render('stories/inner_story' , :story => @story ))%>");
-		
-}
-
 
 $("#story-item-<%=@story.id%>").replaceWith("<%= escape_javascript(render('stories/story_item' , :story => @story ))%>");
 <% if @story.is_complete %>
@@ -11,6 +9,15 @@ $("#story-item-<%=@story.id%>").replaceWith("<%= escape_javascript(render('stori
 	if ($('#portfolio-wrapper').length>0)
 		$('#portfolio-wrapper').isotope('reLayout');
 <%end%>
+}
+else {
+	
+	if ($('#story-<%=@story.story_source_id%>').length >0){
+		$('#story-<%=@story.story_source_id%>').replaceWith("<%= escape_javascript(render('stories/story' , :story => @story ))%>");
+		$('#portfolio-wrapper').isotope('appended', $("#story-<%=@story.id%>")).isotope('reLayout');
+		
+	}
+}
 
 // $('#gritter-notice-wrapper').html('');
 
