--- a/app/views/story_lines/create.js.erb
+++ b/app/views/story_lines/create.js.erb
@@ -10,6 +10,18 @@ $("#story-item-<%=@story.id%>").replaceWith("<%= escape_javascript(render('stori
 		$('#portfolio-wrapper').isotope('reLayout');
 <%end%>
 }
+else if ($('.story-page .story-wrapper').length >0){
+	var storyId = <%=@story.id%>;
+	<% unless @story.story_source_id.nil? %>
+	if ($("#story-item-<%=@story.id%>").length==0) {
+		storyId = <%=@story.story_source_id%>;
+	}
+	<% end %>
+	$("#story-item-"+storyId).replaceWith("<%= escape_javascript(render('stories/story_item' , :story => @story ))%>");
+	<% if @story.is_complete %>
+		$('#comments-'+storyId).html("<%= j render 'comments/comments_list' , story: @story %>");
+	<%end%>
+}
 else {
 	
 	if ($('#story-<%=@story.story_source_id%>').length >0){
