--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,12 +97,13 @@
   </div>
   <!--end: Container-->     
 <% if current_user %> 
-<div class="second-nav">
+<div class="second-nav"
   <div class="container">
       <ul>
+        <li <%= @most_popular_active%>><%=link_to 'Most Popular', most_popular_url %></li>
         <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
         <li <%= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
-        <li><%=link_to 'Invite your friends', '#', class: 'facebook_invitation_link'%></li>
+        
       </ul>
       
   </div>
